# automotive_msgs

./: README.md
automotive_control_msgs/: CMakeLists.txt  package.xml  ros1.cmake  ros2.cmake
automotive_control_msgs/action/: GearChange.action  Longitudinal.action  SteeringWheel.action
automotive_control_msgs/msg/: GearChangeActionFeedback.msg  GearChangeActionGoal.msg  GearChangeActionResult.msg  GearChangeFeedback.msg  GearChangeGoal.msg  GearChangeResult.msg  LongitudinalActionFeedback.msg  LongitudinalActionGoal.msg  LongitudinalActionResult.msg  LongitudinalFeedback.msg  LongitudinalGoal.msg  LongitudinalRequest.msg  SteeringWheel.msg  SteeringWheelActionFeedback.msg  SteeringWheelActionGoal.msg  SteeringWheelActionResult.msg  SteeringWheelFeedback.msg  SteeringWheelGoal.msg  SteeringWheelRequest.msg
automotive_sensor_msgs/: CMakeLists.txt  package.xml  ros1.cmake  ros2.cmake
automotive_sensor_msgs/msg/: AccelControlState.msg  AdaptiveCruiseControlButton.msg  AdvancedDriverAssistanceSystemsButton.msg  ArcticulationAngle.msg  ArticulationAngle.msg  CruiseControlButton.msg  EmergencyButton.msg  EngineSpeed.msg  Environment.msg  Gear.msg  LineSegment.msg  Lines.msg  MassSlopeEstimation.msg  OEMADASStatus.msg  OperatorsExternalLightControls.msg  Pedals.msg  Steering.msg  SteeringWheel.msg  TractorDimensions.msg  TrailerDimensions.msg  TruckDimensions.msg  Tyres.msg  Wheel.msg  WheelSpeedArray.msg  WheelSpeeds.msg  Wheels.msg
