<?xml version="1.0"?>
<package>
  <name>automotive_control_msgs</name>
  <version>0.0.0</version>
  <description>The automotive_control_msgs package</description>

  <maintainer email="rein@todo.todo">rein</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

</package>
